2004-02-17  Joachim Nilsson  <joachim.nilsson@member.fsf.org>

	* configure.in: We want strcasecmp() if not found we use our
	replacement from -lost.

	* lib/Makefile.am (libost_a_SOURCES): New library for stuff not
	on the current platform, lost. Hence the name -lost.

	* lib/strcasecmp.c (strcasecmp): New file, imported from fetchmail-6.2.4.

2004-02-16  Joachim Nilsson  <joachim.nilsson@member.fsf.org>

	* configure.in: Bump verion number.

	* lib/conf/parser.y (log): Add neat log functionality that can be
	turned on with -DDEBUG, --enable-debug.

	* src/config.c (config_load): Don't continue if conf_read_file() fails.

	* lib/conf/tokens.l: Clean up mess when values inside "". 

	(log): Add neat log functionality that can be turned on with
	-DDEBUG, --enable-debug.

	Also, fix missing stuff for "lexer in lexer" while parsing values
	included in ""'s.

	* lib/conf/conf.c (strlndup): Don't overwrite last character of
	string with NUL. Also, make sure we don't try to copy NULL strings.
	
	(conf_set_value): len decremented too much. Make sure to check
	for sane values of len before decrementing it. Also, we cannot
	free value if value has been tampered with, so we save value in
	orig_value and free it instead.

	(conf_read_file): Remove unnecessary yyin, using stdin instead. 
	Plus minor formatting cleanups.


2004-02-10  Joachim Nilsson  <joachim.nilsson@member.fsf.org>

	* lib/conf/conf.c: Add unistd.h, dup() needs it.

	* lib/conf/parser.y: Temporarily revert to non-reentrant yylineno
	behaviour to be able to build on cygwin.

2004-02-09  Joachim Nilsson  <joachim.nilsson@member.fsf.org>

	* lib/conf/conf.c (strlndup): Renamed copy_string() to strlndup().

	(strlncpy): New (still unused) function to replace dangerous strcpy().

2004-01-31  Joachim Nilsson  <joachim.nilsson@member.fsf.org>

	* qadsl.spec.in: Update.

	* qadsl.lsm.in: Update.

	* src/config.c: Update aliases of parameter list and re-add