@@ -33,6 +33,8 @@ dnl    AC_MSG_FAILURE([Cannot find Bison, aborting.
 dnl qadsl, or rather libconf, needs Bison to generate reentrant code.])
 dnl fi
 
+dnl Here is a check for GCC which sets all necessary flags, most notably
+dnl CFLAGS and CXXFLAGS. Checks for other compilers should do the same.
 if test "$GCC" = "yes" ; then
     # set GCC compiler options that should work with all versions
     CFLAGS="${CFLAGS} -Wall -pedantic -fpic -Wno-long-long"
@@ -53,6 +55,13 @@ if test "$GCC" = "yes" ; then
 	AC_COMPILE_IFELSE([ AC_LANG_PROGRAM([[#include <string.h> char *a; a = strdup("foo");]]) ],
 		AC_MSG_RESULT([yes]) ; CFLAGS="$save_CFLAGS -std=gnu99",
 		AC_MSG_RESULT([no]) ; CFLAGS="$save_CFLAGS"))
+
+    # Override autoconf default addition of -O2 and let the
+    # --enable-optimizer-flags decide whether to set it or not
+    OPTIMIZER_CFLAGS="-O2"
+    OPTIMIZER_CXXFLAGS="-O2"
+    CFLAGS=`echo ${CFLAGS} | sed 's/-O2//'`
+    CXXFLAGS=`echo ${CXXFLAGS} | sed 's/-O2//'`
 fi
 
 dnl Checks for libraries.
@@ -61,7 +70,7 @@ AC_PROG_RANLIB
 AC_ARG_ENABLE(debug, 
               AC_HELP_STRING([--enable-debug], [Enable debugging with GDB [default=no]]),[
 CFLAGS="$CFLAGS -g -DDEBUG -DYYERROR_VERBOSE"],[
-CFLAGS="$CFLAGS -O2"
+CFLAGS="$CFLAGS $OPTIMIZER_CFLAGS"
 LDFLAGS="-s"])
 
 AC_ARG_ENABLE(pedantic-compiler,
